[project]
name = "near-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "joyosphere",email = "joyosphere@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nearai (>=0.1.16,<0.2.0) ; python_version == \"3.11\""
]

[tool.poetry]
packages = [{include = "near_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
